# eseb (Elixir's Simple Encoder Binary)

[package]
name = "eseb"
version = "0.1.2"
authors = ["Alex Roper <alex@aroper.net>"]
edition = "2018"
description = "Simple symmetric encryption binary using NaCl."
license = "Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0"
build_stamp = "1.0.2"
clap = "2.33.0"
crc16 = "0"
snow = "0.9.0"
sodiumoxide = "0.2.5"

[build-dependencies]
build_stamp = "1.0.2"
