# eseb (Elixir's Simple Encoder Binary)

[package]
name = "eseb"
version = "1.1.5"
authors = ["Alex Roper <alex@aroper.net>"]
edition = "2021"
description = "Simple symmetric encryption binary using NaCl and Snow."
license = "Apache-2.0"

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.13"
brotli = "3.3"
build_stamp = "1.0"
clap = "3.2"
blake2 = "0.10"
tokio-util = {version = "0.7", features=["compat"]}
rayon = "1.7"
tokio = {version = "1.21", features=["full", "io-util"]}
sha1 = "0.10"
crc32c = "0.6"
crc16 = "0.4"
generic-array = "0.14"
lz4_flex = "0.11"
record_reader = { version = "1.0", git = "https://github.com/calmofthestorm/record_reader.git", features = [] }
serde = { version = "1.0", default-features = false, features = [ "derive", "std", "alloc" ] }
snow = "0.9"
sodiumoxide = "0.2"

[build-dependencies]
build_stamp = "1.0"

[dev-dependencies]
bincode = "1.3"
hex = "0.4"
